# cpp-market-making-simulator

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  microbenchmarks.cpp
core/: CMakeLists.txt
core/include/mmsim/: avellaneda_stoikov.h  event_bus.h  event_types.h  fixed_spread_mm.h  market_data_feed.h  matching_engine.h  order_book.h  order_manager.h  risk_manager.h  types.h  volatility.h
core/src/: avellaneda_stoikov.cpp  event_bus.cpp  market_data_feed.cpp  matching_engine.cpp  order_book.cpp  order_manager.cpp  risk_manager.cpp  volatility.cpp
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
dashboard/scripts/: verify-ws.mjs
dashboard/src/: App.tsx  index.css
dashboard/src/components/: ComparisonReport.tsx  ControlPanel.tsx  InventoryGauge.tsx  MetricsBar.tsx  MonospaceNum.tsx  OrderBookView.tsx  PnLChart.tsx  TerminalPanel.tsx  TradeLog.tsx  VolatilityPanel.tsx
dashboard/src/hooks/: useWebSocket.ts
dashboard/src/types/: ws.ts
data/: demo_ticks.csv  sample_ticks.csv
scripts/: generate-demo-ticks.mjs  run-demo.ps1  run-demo.sh
server/: CMakeLists.txt  comparison_sim.cpp  comparison_sim.hpp  main.cpp  ws_main.cpp
server/ws/: json_ws.hpp  ws_hub.cpp  ws_hub.hpp
tests/: CMakeLists.txt  test_avellaneda_stoikov.cpp  test_avellaneda_stoikov_manual.cpp  test_event_bus.cpp  test_event_bus_manual.cpp  test_market_data_feed.cpp  test_matching_edge_cases_manual.cpp  test_matching_engine.cpp  test_order_book.cpp  test_order_book_manual.cpp  test_order_book_price_time_manual.cpp  test_risk_manager.cpp  test_volatility.cpp  test_volatility_estimators_manual.cpp
